--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "http-proxy-middleware": "^2.0.6",
+    "nodemon": "^3.0.2",
     "prettier": "3.1.0"
   }
 }
