--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "SET DEBUG=blog-api:* & nodemon app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
